--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.TurboVPNPro"
         tools:targetApi="31">
         <activity
+            android:name=".FeedbackActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UI.Feedback.FeedbackMainActivity"
+            android:exported="false" />
+        <activity
             android:name=".UI.AboutUsActivity"
             android:exported="false">
             <meta-data
@@ -38,7 +44,7 @@
         <activity
             android:name=".UI.login.LoginActivity"
             android:exported="true"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".UI.SettingActivity"
             android:exported="false"
@@ -51,7 +57,7 @@
             android:name=".UI.HomeActivity"
             android:exported="true"
             android:label="@string/title_activity_home"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".SplashActivity"
             android:exported="true"
