--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.TurboVPNPro"
         tools:targetApi="31">
         <activity
+            android:name=".UI.FaQ.FaqActivity"
+            android:exported="false" />
+        <activity
             android:name=".UI.SplitActivity"
             android:exported="false">
             <meta-data
